[package]
name = "izanami-cli"
version = "0.0.3"
authors = ["adelegue <adelegue@hotmail.com>"]

[dependencies]
clap = "2.33"
regex = "1"
hyper = "0.13"
futures = "0.3.4"
tokio-core = "0.1.17"
reqwest = "0.10.4"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
frunk = "0.3.1"
json-color = "0.7.1"
